--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,194 @@
-.App {
+/* .navbar {
+  background-color: #f5c800;
+  color: #ffffff;
+  font-size: bold;
+}
+
+.logo--nav {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+*/
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  /* font-family: "Inter", sans-serif; */
+  background-image: url("../public/images/Cat-Cloud_Feet-EN2.jpg");
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.main {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.list--container {
+  width: 70%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav--list {
+  list-style: none;
+  /* margin-top: 25px; */
+  margin: 30px auto;
+  padding-left: 0;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav--items {
+  font-size: 25px;
+  font-weight: bold;
+  display: inline;
+  text-align: center;
+  margin-right: 35px;
+  color: #ffd307;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.logo--nav {
+  width: 50px;
+  height: 50px;
+  margin: 0 20px;
+  margin-bottom: 10px;
+}
+
+.lang--button {
+  background-color: #fcd303;
+  color: #ffffff;
+  font-weight: bold;
+  border: none;
+  height: 50%;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.main--title {
+  margin-top: 10px;
+  color: #40c6e7;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.div--content {
+  margin: 200px 50px;
+}
+
+.content--head {
+  width: 40%;
+  color: #fcd303;
+  font-size: 60px;
+  font-weight: 500;
+  line-height: 1em;
+}
+
+.content--text {
+  width: 30%;
+  color: #ffffff;
+}
+
+.create--profile--button {
+  border: none;
+  border-radius: 7px;
+  padding: 10px;
+  color: #40c6e7;
+  background-color: #ffffff;
+  font-size: larger;
+  font-weight: bolder;
+}
+
+.service--section {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
+}
+
+.service {
+  width: 25%;
+  margin-left: 50px;
+  margin-top: 30px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.service--img {
+  display: block;
+  margin: auto;
+}
+
+.service--title {
+  color: #37b6d5;
+}
+
+.service--content {
+  width: 180px;
+  color: #fcd303;
+  margin: auto;
+}
+
+.center--form {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.profile--form {
+  background-color: #98cef0;
+  color: #ffffff;
+  width: 80%;
+  border-radius: 20px;
+  justify-items: center;
+  margin: 30px 0;
+  padding: 20px 20px;
+  padding-bottom: 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form--title {
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: 700;
+  padding-left: 20px;
+  padding-top: 20px;
+}
+
+input {
+  border-radius: 5px;
+  border: none;
+  display: block;
+  padding: 5px 5px;
+  margin: 10px 20px;
+  width: 40%;
+}
+
+label {
+  margin-left: 10px;
+  font-size: 20px;
+}
+
+.submit--btn {
+  border: none;
+  border-radius: 7px;
+  padding: 7px 0;
+  color: #ffffff;
+  font-size: larger;
+  font-weight: bolder;
+  background-color: #fcd303;
+  width: 100px;
+  position: absolute;
+  left: 50%;
+  top: 85%;
+  margin-top: 30px;
+}
+
+.email--img {
+  display: block;
+  margin: auto;
+  padding: 20px 0;
 }
